--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
         </p>
         <div class="hero-cta">
           <a class="btn-primary" href="#pricing">Measure Before You Deploy</a>
-          <a class="btn-ghost" href="/methodology">View Full Methodology</a>
+          <a class="btn-ghost" href="#methodology">View Full Methodology</a>
         </div>
         <div class="badges">
           <div class="badge"><span class="dot"></span>Built for CFO / COO / Risk Oversight</div>
@@ -315,7 +315,7 @@
         </p>
         <div class="hero-cta">
           <a class="btn-primary" href="#pricing">先量測，再部署</a>
-          <a class="btn-ghost" href="/methodology">查看完整方法論</a>
+          <a class="btn-ghost" href="#methodology">查看完整方法論</a>
         </div>
         <div class="badges">
           <div class="badge"><span class="dot"></span>面向 CFO / COO / 風險監督</div>
@@ -331,7 +331,7 @@
         </p>
         <div class="hero-cta">
           <a class="btn-primary" href="#pricing">先量化，再部署</a>
-          <a class="btn-ghost" href="/methodology">查看完整方法论</a>
+          <a class="btn-ghost" href="#methodology">查看完整方法论</a>
         </div>
         <div class="badges">
           <div class="badge"><span class="dot"></span>面向 CFO / COO / 风险监督</div>
@@ -456,15 +456,15 @@
     <div class="section" id="methodology">
       <div class="langblock is-active" data-lang="en">
         <h2>Methodological Framework</h2>
-        <p class="muted">A structured protocol — shown here as steps only. Full details live on the Methodology page.</p>
+        <p class="muted">A structured protocol — shown here as steps only. Full details live on this Methodology section.</p>
       </div>
       <div class="langblock" data-lang="zhHant">
         <h2>方法論架構</h2>
-        <p class="muted">首頁只列步驟，完整內容請至方法論頁。</p>
+        <p class="muted">首頁只列步驟；「查看完整方法論」會直接跳到本段。</p>
       </div>
       <div class="langblock" data-lang="zhHans">
         <h2>方法论框架</h2>
-        <p class="muted">首页只列步骤，完整内容请至方法论页。</p>
+        <p class="muted">首页只列步骤；“查看完整方法论”会直接跳到本段。</p>
       </div>
 
       <div class="langblock is-active" data-lang="en">
@@ -483,7 +483,7 @@
         </p>
 
         <div class="hero-cta" style="margin-top:14px;">
-          <a class="btn-primary" href="/methodology">View Full Methodology</a>
+          <a class="btn-primary" href="#methodology">View Full Methodology</a>
           <a class="btn-ghost" href="#pricing">See Engagement Tiers</a>
         </div>
       </div>
@@ -504,7 +504,7 @@
         </p>
 
         <div class="hero-cta" style="margin-top:14px;">
-          <a class="btn-primary" href="/methodology">查看完整方法論</a>
+          <a class="btn-primary" href="#methodology">查看完整方法論</a>
           <a class="btn-ghost" href="#pricing">查看方案</a>
         </div>
       </div>
@@ -525,7 +525,7 @@
         </p>
 
         <div class="hero-cta" style="margin-top:14px;">
-          <a class="btn-primary" href="/methodology">查看完整方法论</a>
+          <a class="btn-primary" href="#methodology">查看完整方法论</a>
           <a class="btn-ghost" href="#pricing">查看方案</a>
         </div>
       </div>
