--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ img{max-width:100%;display:block}
 
 /* HEADER */
 header{position:fixed;inset:0 0 auto 0;z-index:100;height:60px;padding:0 24px;display:flex;align-items:center;justify-content:space-between;background:rgba(20,29,46,0.93);backdrop-filter:blur(16px);-webkit-backdrop-filter:blur(16px);border-bottom:1px solid var(--border)}
-.logo img{height:44px;width:auto}
+.logo img{height:44px;width:auto;mix-blend-mode:lighten;border-radius:6px}
 nav{display:flex;align-items:center;gap:4px}
 nav a{font-size:13px;color:var(--muted);text-decoration:none;padding:6px 10px;border-radius:6px;white-space:nowrap;transition:color .2s,background .2s}
 nav a:hover{color:var(--text);background:rgba(255,255,255,0.05)}
@@ -230,6 +230,8 @@ footer a:hover{color:var(--text)}
   <button class="lb-btn"     onclick="setLang('tw',this)">繁</button>
   <button class="lb-btn"     onclick="setLang('cn',this)">简</button>
 </div>
+
+<div class="drawer" id="drawer">
   <a href="#measures"   onclick="navTo('measures',event);closeDrawer()">What GL Measures</a>
   <a href="#validation" onclick="navTo('validation',event);closeDrawer()">Validation</a>
   <a href="#method"     onclick="navTo('method',event);closeDrawer()">Method</a>
